--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OpenWidgets">
+        <activity android:name=".activity.Debug"></activity>
+
+        <receiver android:name=".widgets.DigitalClock">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/digital_clock_info" />
+        </receiver>
+
+        <activity android:name=".widgets.DigitalClockConfigureActivity">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name=".TestService"
+            android:enabled="true"
+            android:exported="true" />
         <service
             android:name=".WidgetsUpdaterService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
