--- a/app_versions.json
+++ b/app_versions.json
@@ -1,8 +1,8 @@
 {
   "format_version": 1,
   "last": {
-    "build": 4,
-    "name": "1.2",
-    "download_url": "https://fazziclay.ru/"
+    "build": 555,
+    "name": "TEST 555",
+    "download_url": "https://fazziclay.ru/555"
   }
 }
