--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
     dependencies {
+        //noinspection AndroidGradlePluginVersion
         classpath "com.android.tools.build:gradle:4.1.3"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,7 +17,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
