--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "ru.fazziclay.openwidgets"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 6
-        versionName '1.4 s1'
+        versionCode 7
+        versionName '1.4'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
