--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "ru.fazziclay.openwidgets"
+        applicationId "ru.fazziclay.openwidgets.dev"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 8
-        versionName '1.4.1'
+        versionCode 10
+        versionName '1.4.2 DEV'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,7 +38,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     //noinspection GradlePath
     implementation files('/home/fazziclay/_MOE/_programmerProjects/OpenWidgets/libs/FazziCLAYLibs.jar')
     implementation 'com.google.code.gson:gson:2.8.7'
