--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "ru.fazziclay.openwidgets.dev"
+        applicationId "ru.fazziclay.openwidgets"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 11
-        versionName '1.4.2 DEV'
+        versionCode 12
+        versionName '1.5'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
