--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
         release {
         }
     }
+
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -26,10 +27,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     buildFeatures {
         viewBinding true
     }
@@ -38,10 +41,11 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    //noinspection GradlePath
-    implementation files('/home/fazziclay/_MOE/_programmerProjects/OpenWidgets/libs/FazziCLAYLibs_1.jar')
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    // noinspection GradlePath
+    // implementation files('/home/fazziclay/_MOE/_programmerProjects/OpenWidgets/libs/FazziCLAYLibs_1.jar')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
