--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "ru.fazziclay.openwidgets"
-        minSdkVersion 16
+        minSdkVersion 23 // 16
         targetSdkVersion 30
         versionCode 12
         versionName '1.5'
@@ -44,6 +44,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.github.martin-stone:hsv-alpha-color-picker-android:3.0.1'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
     // implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.13.2'
