--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,18 @@
                 android:resource="@xml/widget_network_info" />
         </receiver>
 
+        <receiver android:name=".android.widget.BtcWidgetProvider"
+            android:label="@string/widget_name_btc"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_btc_info" />
+        </receiver>
+
         <receiver android:name=".android.receiver.AndroidBootCompleted">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
